k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postboxen-prod
  labels:
    name: postboxen-prod
    environment: production
